scripts/mtls-gateway-movies.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: movies-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
  namespace: aio
spec:
  hosts:
  - "*"
  gateways:
  - movies-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: movies
        port:
          number: 8080
